<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="d.osvaldo.myformulario.MainActivity"
    android:orientation="vertical"
    android:background="@color/bisque">

    <TextView
        style="@style/StyleTextview"
        android:layout_width="match_parent"
        android:text="@string/titulo"
        android:textColor="@color/white"
        />

    <LinearLayout
        style="@style/StyleLinearLayout">
        <TextView
            style="@style/StyleTextview"
            android:text="@string/login"
            android:textColor="@color/black"/>
        <EditText
            style="@style/StyleEdittext"
            android:hint="@string/login2"
            android:id="@+id/eLogin"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        style="@style/StyleLinearLayout">
        <TextView
            style="@style/StyleTextview"
            android:text="@string/password"
            android:textColor="@color/black"/>
        <EditText
            style="@style/StyleEdittext"
            android:id="@+id/ePassword"
            android:inputType="textPassword"
            android:hint="@string/pass2"/>
    </LinearLayout>
    <LinearLayout
        style="@style/StyleLinearLayout">
        <TextView
            style="@style/StyleTextview"
            android:text="@string/rpassword"
            android:textColor="@color/black"/>
        <EditText
            style="@style/StyleEdittext"
            android:id="@+id/erPassword"
            android:inputType="textPassword"
            android:hint="@string/pass3"/>
    </LinearLayout>
    <LinearLayout
        style="@style/StyleLinearLayout">
        <TextView
            style="@style/StyleTextview"
            android:text="@string/correo"
            android:textColor="@color/black"/>
        <EditText
            style="@style/StyleEdittext"
            android:hint="@string/correo2"
            android:inputType="textEmailAddress"
            android:id="@+id/eCorreo"/>
    </LinearLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/rFemenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femenino"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <LinearLayout
        style="@style/StyleLinearLayout">
        <Button
            android:id="@+id/bFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaNaci"
            android:textSize="12sp"
            android:textColor="@color/black"/>
        <EditText
            style="@style/StyleEdittext"
            android:id="@+id/eFecha"
            android:enabled="false"/>
    </LinearLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>

    <TextView
        style="@style/StyleTextview"
        android:text="@string/pasatiempos"
        />
    <LinearLayout
        style="@style/StyleLinearLayout"
        android:orientation="horizontal">
            <CheckBox
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/bailar"
                android:id="@+id/cBailar"
                android:onClick="onCheckBoxClicked"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/nadar"
                android:id="@+id/cNadar"
                android:onClick="onCheckBoxClicked"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cine"
                android:id="@+id/cCine"
                android:onClick="onCheckBoxClicked"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/correr"
                android:id="@+id/cCorrer"
                android:onClick="onCheckBoxClicked"/>
    </LinearLayout>




    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/yellow"
        android:textSize="20sp"
        android:id="@+id/bGuardar"
        android:onClick="onButtonClicked"/>
    <LinearLayout
        style="@style/StyleLinearLayout"
        android:layout_weight="4">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>


</LinearLayout>


